--- a/www/sds_newsletter_2020.Rmd
+++ b/www/sds_newsletter_2020.Rmd
@@ -43,7 +43,7 @@ What a bonkers 2019-2020 it has been! We'll be telling our grandchildren's gener
 1. The print edition of my [*Statistical Inference via Data Science: A ModernDive into R and the Tidyverse*](https://moderndive.com/){target="_blank"} textbook was published by CRC Press.
 1. My first foray into forest ecology research was published by the Public Library of Science journal PLOS One: [*A permutation test and spatial cross-validation approach to assess models of interspecific competition between trees.*](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0229930){target="_blank"} Try saying that title three times fast! 
 
-Lastly, my normal self-care routines took a big hit from the shoulder surgery I had in December as well as the pandemic. Some new outlets for well-being I've discovered as a result include: sensory deprivation epsom salt-water floats, TRX suspension training, spinning, going on long walks, and gardening. Although a family of deer are constantly eating all my crops!
+Lastly, my normal self-care routines took a big hit from the shoulder surgery I had in December as well as the pandemic. Some new outlets for well-being I've discovered as a result include: sensory deprivation epsom salt-water floats, TRX suspension training, spinning, going on long walks, and gardening. Although a family of deer are constantly eating all my crops `r emo::ji("deer")``r emo::ji("deer")``r emo::ji("deer")``r emo::ji("herb")`!
 
 #### Katie Kinnaird
 
