added Sara's update

--- a/www/sds_newsletter_2020.Rmd
+++ b/www/sds_newsletter_2020.Rmd
@@ -55,6 +55,9 @@ Lastly, my normal self-care routines took a big hit from the shoulder surgery I 
 
 #### Sara Stoudt
 
+I’m excited to jump up to this part of the newsletter this year. :) I finished my PhD in statistics at UC Berkeley this summer and am joining the SDS program as a lecturer for the year. I’m looking forward to teaching Communicating with Data and intro stats (and being back in Herrell’s territory). 
+
+Since the last newsletter I had an amazing summer at the LA Times, I wrote my dissertation ("A Statistical Investigation of Species Distribution Models and Communication of Statistics Across Disciplines"), Deb Nolan and I submitted our "Communicating with Data" book, and I picked up [some other](https://pudding.cool/2020/04/kidz-bop/) [fun projects](https://pudding.cool/2020/06/karen/) [along the way](https://arxiv.org/pdf/2007.08708.pdf).
 
 ## Alumni Updates
 
