added Miles' update

--- a/www/sds_newsletter_2020.Rmd
+++ b/www/sds_newsletter_2020.Rmd
@@ -53,6 +53,10 @@ Lastly, my normal self-care routines took a big hit from the shoulder surgery I 
 
 #### Miles Ott
 
+
+What a year! Before everything got locked down I traveled to Santiago, Chile to work with my collaborator [Isabelle Beaudry](http://www.mat.uc.cl/personas/perfil/isabelle.beaudry), to Irvine to work with [Alicia Johnson](https://www.macalester.edu/mscs/facultystaff/aliciajohnson/) and Smith Alum [Mine Dogucu](https://mdogucu.ics.uci.edu/) on our forthcoming textbook *Bayes Rules! An Introduction to Bayesian Modeling with R*, and to Harvard and the Icahn School of Medicine to talk about my research in respondent driven sampling. This year I taught Intro Stats in the fall, and for the first time I taught the SDS Capstone course in the spring. My first SDS major advisees graduated, and I am so proud of all of them! I joined the development committee of the American Statistical Association, and am excited to learn more about the ASA as an organization. I am delighted to be working with new SDS colleagues Will Hopper, Scott LaCombe, and Sara Stoudt! Special message to alums: I love hearing/reading your updates! 
+
+
 #### Sara Stoudt
 
 I’m excited to jump up to this part of the newsletter this year. :) I finished my PhD in statistics at UC Berkeley this summer and am joining the SDS program as a lecturer for the year. I’m looking forward to teaching Communicating with Data and intro stats (and being back in Herrell’s territory). 
