added Emma's update

--- a/www/sds_newsletter_2020.Rmd
+++ b/www/sds_newsletter_2020.Rmd
@@ -75,6 +75,8 @@ Since the last newsletter I had an amazing summer at the LA Times, I wrote my di
 
 - [Wencong (Priscilla) Li '18](https://www.linkedin.com/in/wencong-priscilla-li-83732169/): The recruiting season is starting soon and I hope to see more Smithies from SDS to apply for the Analyst/Summer Analyst position at my company, [Cornerstone Research](https://www.cornerstone.com/). Please feel free to email me at liwencong1995@gmail.com if any of your students is interested and I am more than happy to help!
 
+- [Emma Livingston '20:](https://www.linkedin.com/in/emma-livingston/) I finished my last semester from home in Illinois after working with Brittany Bennett '16 & the [Sunrise Movement](https://www.sunrisemovement.org/) on my SDS Capstone project and serving as president of both the Smith College Glee Club and the Asexual & Aromantic Community and Education Club (AACEs). This summer I started working remotely at MassMutual in their [Data Science Development Program](https://datascience.massmutual.com/dsdp), and will start my Masters at UMass in [CICS](https://www.cics.umass.edu/) in the fall. In my time off and between side projects, I have been embroidering, learning to cut my own hair (thanks quarantine), and dreaming of the garden I'll get to start planting once I move to Amherst in mid-August. Follow along with my latest ramblings on [twitter](https://twitter.com/livin_emma) or on my [blog](https://emmal73.github.io/)!
+
 ## What's next? 
 
 ### Joint Statistical Meetings
