added KTH update

--- a/www/sds_newsletter_2020.Rmd
+++ b/www/sds_newsletter_2020.Rmd
@@ -34,6 +34,8 @@ This crazy year is divided in half by COVID-19! One highlight for me from the be
 
 #### Katherine Halvorsen
 
+Last fall I returned from teaching at Middlebury College in 2018--19 to teach at Smith again. September was a challenging month. I plunged back into Smith advising, committee work, and teaching Probability and Categorical Data Analysis. I became the Honors Chair for Math and Stat. I served as honors advisor to Crystal Zang '20 in SDS and as a reader for Aoi Ogawa '20's thesis in SDS. I visited Kenyon College in Gambier, Ohio, as a member of their visiting committee for the Math and Stat Department, and I continue to serve on the Board of Directors for the American Statistical Association and on the ASA’s Council of Sections Governing Board. In the beginning of the spring term my husband and I enjoyed several Smith basketball home games. After spring break and during the move to online teaching we have turned to jigsaw puzzles for amusement and long walks. My big news is that I have retired after 31 years teaching at Smith. I knew I would miss you all and thus I've signed up to teach part-time next year: Probability in the fall and Math Stat in the spring.
+
 #### Will Hopper
 
 I'm excited to start my first full year at Smith, and keep doing what I do best: introducing students to their new favorite subject, statistics! I'll be teaching SDS 201, which introduces people to the wonderful world of statistical modeling, as well as SDS 291, which goes more into depth with Multiple Regression, and introduces people to an even wider family of statistical models. Thanks to teaching remotely, I've revived my video production and editing skills that have lied dormant since undergraduate film classes. Despite the circumstances, I've had a lot of fun making silly thumbnails and pretending I'm a YouTuber.
