--- a/www/sds_newsletter_2020.Rmd
+++ b/www/sds_newsletter_2020.Rmd
@@ -34,7 +34,7 @@ This crazy year is divided in half by COVID-19! One highlight for me from the be
 
 #### Katherine Halvorsen
 
-Last fall I returned from teaching at Middlebury College in 2018--19 to teach at Smith again. September was a challenging month. I plunged back into Smith advising, committee work, and teaching Probability and Categorical Data Analysis. I became the Honors Chair for Math and Stat. I served as honors advisor to Crystal Zang '20 in SDS and as a reader for Aoi Ogawa '20's thesis in SDS. I visited Kenyon College in Gambier, Ohio, as a member of their visiting committee for the Math and Stat Department, and I continue to serve on the Board of Directors for the American Statistical Association and on the ASA’s Council of Sections Governing Board. In the beginning of the spring term my husband and I enjoyed several Smith basketball home games. After spring break and during the move to online teaching we have turned to jigsaw puzzles for amusement and long walks. My big news is that I have retired after 31 years teaching at Smith. I knew I would miss you all and thus I've signed up to teach part-time next year: Probability in the fall and Math Stat in the spring.
+Last fall I returned from teaching at Middlebury College in 2018--19 to teach at Smith again. September was a challenging month. I plunged back into Smith advising, committee work, and teaching Probability and Categorical Data Analysis. I became the Honors Chair for Math and Stat. I served as honors advisor to **Crystal Zang '20** in SDS and as a reader for **Aoi Ogawa '20**'s thesis in SDS. I visited Kenyon College in Gambier, Ohio, as a member of their visiting committee for the Math and Stat Department, and I continue to serve on the Board of Directors for the American Statistical Association and on the ASA’s Council of Sections Governing Board. In the beginning of the spring term my husband and I enjoyed several Smith basketball home games. After spring break and during the move to online teaching we have turned to jigsaw puzzles for amusement and long walks. My big news is that I have retired after 31 years teaching at Smith. I knew I would miss you all and thus I've signed up to teach part-time next year: Probability in the fall and Math Stat in the spring.
 
 #### Will Hopper
 
@@ -56,12 +56,13 @@ Lastly, my normal self-care routines took a big hit from the shoulder surgery I 
 #### Katherine M. Kinnaird
 
 It's almost strange to think that our last newsletter was just a year ago! My second year at Smith included teaching new courses, attending conferences, submitting research papers for review, bringing collaborators to Smith, and knitting (both Rmd files and actual yarn). A few highlights from this year, include:
+
 * Journeying to International Society of Music Information Retrieval (ISMIR) Conference in the Netherlands with seven Smithies in November. They opened the main conference presenting their peer-reviewed paper and then spent the rest of the week discussing music, computer science, and video games with leading experts in the field. They were constantly mistaken for graduate students, which was really cool. 
 * Co-Organizing the [Women in MIR workshop](https://wimir.wordpress.com/2019/06/26/wimir-workshop-2019-project-guides/) (that four Smithies attended!) and attending the [Women in Machine Learning workshop](https://wimlworkshop.org/2019/) in 2019
 * Being part of the Kahn Project [TranslationS](https://www.smith.edu/academics/kahn-institute/translations-project) and worked on my book proposal with my collaborator [Prof. John Laudun](http://johnlaudun.org/). Prof. Laudun was also able to visit Smith, where we shared our work at the Liberal Arts Lunch. 
-* Supervising Jessica Keast's SDS thesis. It was a great project, and it was an absolute highlight of my year to see her present her work (over Zoom) to an audience that included SDS majors, MIR experts, and faculty as well as her friends and family. Jessica also won the annual SDS Research Prize for her collection of research conducted at Smith, including her thesis and work on the ISMIR paper. 
+* Supervising **Jessica Keast '20**'s SDS thesis. It was a great project, and it was an absolute highlight of my year to see her present her work (over Zoom) to an audience that included SDS majors, MIR experts, and faculty as well as her friends and family. Jessica also won the annual SDS Research Prize for her collection of research conducted at Smith, including her thesis and work on the ISMIR paper. 
 
-There's lots to be excited about for next year, including our amazing new SDS colleagues Will Hopper, Scott LaCombe, and Sara Stoudt! Looking forward to working with all of them!
+There's lots to be excited about for next year, including our amazing new SDS colleagues Will Hopper, Scott LaCombe, and **Sara Stoudt '15**! Looking forward to working with all of them!
 
 
 #### Scott LaCombe
@@ -71,7 +72,7 @@ There's lots to be excited about for next year, including our amazing new SDS co
 #### Miles Ott
 
 
-What a year! Before everything got locked down I traveled to Santiago, Chile to work with my collaborator [Isabelle Beaudry](http://www.mat.uc.cl/personas/perfil/isabelle.beaudry), to Irvine to work with [Alicia Johnson](https://www.macalester.edu/mscs/facultystaff/aliciajohnson/) and Smith Alum [Mine Dogucu](https://mdogucu.ics.uci.edu/) on our forthcoming textbook *Bayes Rules! An Introduction to Bayesian Modeling with R*, and to Harvard and the Icahn School of Medicine to talk about my research in respondent driven sampling. This year I taught Intro Stats in the fall, and for the first time I taught the SDS Capstone course in the spring. My first SDS major advisees graduated, and I am so proud of all of them! I joined the development committee of the American Statistical Association, and am excited to learn more about the ASA as an organization. I am delighted to be working with new SDS colleagues Will Hopper, Scott LaCombe, and Sara Stoudt! Special message to alums: I love hearing/reading your updates! 
+What a year! Before everything got locked down I traveled to Santiago, Chile to work with my collaborator [Isabelle Beaudry](http://www.mat.uc.cl/personas/perfil/isabelle.beaudry), to Irvine to work with [Alicia Johnson](https://www.macalester.edu/mscs/facultystaff/aliciajohnson/) and Smith Alum [**Mine Dogucu '09**](https://mdogucu.ics.uci.edu/) on our forthcoming textbook *Bayes Rules! An Introduction to Bayesian Modeling with R*, and to Harvard and the Icahn School of Medicine to talk about my research in respondent driven sampling. This year I taught Intro Stats in the fall, and for the first time I taught the SDS Capstone course in the spring. My first SDS major advisees graduated, and I am so proud of all of them! I joined the development committee of the American Statistical Association, and am excited to learn more about the ASA as an organization. I am delighted to be working with new SDS colleagues Will Hopper, Scott LaCombe, and **Sara Stoudt '15**! Special message to alums: I love hearing/reading your updates! 
 
 
 #### Sara Stoudt
@@ -86,7 +87,7 @@ Since the last newsletter I had an amazing summer at the LA Times, I wrote my di
 
 - [Wencong (Priscilla) Li '18](https://www.linkedin.com/in/wencong-priscilla-li-83732169/): The recruiting season is starting soon and I hope to see more Smithies from SDS to apply for the Analyst/Summer Analyst position at my company, [Cornerstone Research](https://www.cornerstone.com/). Please feel free to email me at liwencong1995@gmail.com if any of your students is interested and I am more than happy to help!
 
-- [Emma Livingston '20:](https://www.linkedin.com/in/emma-livingston/) I finished my last semester from home in Illinois after working with Brittany Bennett '16 & the [Sunrise Movement](https://www.sunrisemovement.org/) on my SDS Capstone project and serving as president of both the Smith College Glee Club and the Asexual & Aromantic Community and Education Club (AACEs). This summer I started working remotely at MassMutual in their [Data Science Development Program](https://datascience.massmutual.com/dsdp), and will start my Masters at UMass in [CICS](https://www.cics.umass.edu/) in the fall. In my time off and between side projects, I have been embroidering, learning to cut my own hair (thanks quarantine), and dreaming of the garden I'll get to start planting once I move to Amherst in mid-August. Follow along with my latest ramblings on [twitter](https://twitter.com/livin_emma) or on my [blog](https://emmal73.github.io/)!
+- [Emma Livingston '20:](https://www.linkedin.com/in/emma-livingston/) I finished my last semester from home in Illinois after working with **Brittany Bennett '16** & the [Sunrise Movement](https://www.sunrisemovement.org/) on my SDS Capstone project and serving as president of both the Smith College Glee Club and the Asexual & Aromantic Community and Education Club (AACEs). This summer I started working remotely at MassMutual in their [Data Science Development Program](https://datascience.massmutual.com/dsdp), and will start my Masters at UMass in [CICS](https://www.cics.umass.edu/) in the fall. In my time off and between side projects, I have been embroidering, learning to cut my own hair (thanks quarantine), and dreaming of the garden I'll get to start planting once I move to Amherst in mid-August. Follow along with my latest ramblings on [twitter](https://twitter.com/livin_emma) or on my [blog](https://emmal73.github.io/)!
 
 ## What's next? 
 
