added Lizzy update

--- a/www/sds_newsletter_2020.Rmd
+++ b/www/sds_newsletter_2020.Rmd
@@ -181,6 +181,8 @@ Since the last newsletter I had an amazing summer at the LA Times, I wrote my di
 
 - [Emma Livingston '20](https://www.linkedin.com/in/emma-livingston/): I finished my last semester from home in Illinois after working with **Brittany Bennett '16** & the [Sunrise Movement](https://www.sunrisemovement.org/) on my SDS Capstone project and serving as president of both the Smith College Glee Club and the Asexual & Aromantic Community and Education Club (AACEs). This summer I started working remotely at MassMutual in their [Data Science Development Program](https://datascience.massmutual.com/dsdp), and will start my Masters at UMass in [CICS](https://www.cics.umass.edu/) in the fall. In my time off and between side projects, I have been embroidering, learning to cut my own hair (thanks quarantine), and dreaming of the garden I'll get to start planting once I move to Amherst in mid-August. Follow along with my latest ramblings on [twitter](https://twitter.com/livin_emma) or on my [blog](https://emmal73.github.io/)!
 
+- [Lizzy (Atkins) Offermann '15](https://www.linkedin.com/in/elizabethoffermann/): Since the last update, I have taken a shift in my career back to my roots of data! I am a Business Intelligence Analyst on a fast-track to a Business Intelligence Developer then on to a Senior Data Scientist. I work at an institution in downtown Maryland with the mission to improve the lives of children and young adults with pediatric developmental disabilities. My daily focus is on the development of our enterprise-level data/databases for operational and research purposes using the medical record system, Epic. Besides work, I have been homeschooling our twin toddlers since April, am halfway through my master's degree in Clinical and Translational Research from George Washington University, and was just elected to the Class of 2015 Cabinet as Treasurer. Life has been busy!
+
 - [Maura Spiegelman '08](https://www.linkedin.com/in/maura-spiegelman-88a9207): **I completed my PhD** in Survey Methodology this spring, with a remote defense! In my job at the National Center for Education Statistics, I'm working on some of the questionnaire, operational, and analytical challenges related to collecting data from school staff during the upcoming school year, when many schools will be conducting instruction remotely.
 
 ## What's next? 
