--- a/www/mu_sigma_rho.Rmd
+++ b/www/mu_sigma_rho.Rmd
@@ -5,21 +5,17 @@ output:
     toc: false
 ---
 
-<a href="http://www.stat.purdue.edu/~mccabe/msr/">Mu Sigma Rho</a> is the national statistics honor society, and the Boston Chapter of the ASA oversees <a href="http://www.colby.edu/musigmarho/">nominations</a> from Smith each spring.
+[Mu Sigma Rho](http://www.stat.purdue.edu/~mccabe/msr/) is the national statistics honor society, and the [Boston Chapter of the American Statistical Association](https://community.amstat.org/bostonchapter/home) oversees [nominations](http://www.colby.edu/musigmarho/) from Smith each spring.
 
 
 ```{r, include=FALSE}
 library(tidyverse)
 ```
 
-```{r, eval=FALSE, include=FALSE}
+```{r, eval=TRUE, include=FALSE}
 library(googlesheets4)
 key <- "1P2ZOOXB5dHwycXZkFYm_3u7M4lEPPm36RJHdMloAZlY"
 archive <- read_sheet(key)
-```
-
-```{r, echo=FALSE, message=FALSE}
-archive <- read_csv(here::here("www", "Mu_Sigma_Rho_DB.csv"))
 ```
 
 ```{r, include=FALSE, eval=FALSE}
@@ -53,7 +49,7 @@ archive %>%
 
 
 
-```{r mu-sigma-rho, fig.cap="Growth of Mu Sigma Rho inductees.", echo=FALSE, warning=FALSE}
+```{r mu-sigma-rho, fig.cap="Growth of Mu Sigma Rho inductees.", echo=FALSE, warning=FALSE, message=FALSE}
 archive %>%
   mutate(
     class_year = ifelse(is.na(class), 0, induction - (2000 + parse_number(class))),
