fixed bug in major plot

--- a/www/enrollments.Rmd
+++ b/www/enrollments.Rmd
@@ -60,8 +60,10 @@ dual_prefix <- sds %>%
   group_by(crn_term, deptt) %>%
   summarize(N = n(), num_students = n_distinct(id))
 
-enrollment_plot <- ggplot(data = terms, 
-       aes(x = as.factor(term_date), y = N, fill = fct_relevel(deptt, "SDS", after = 3))) + 
+enrollment_plot <- ggplot(
+  data = terms, 
+  aes(x = as.factor(term_date), y = N, fill = fct_relevel(deptt, "SDS", after = 3))
+) + 
   geom_col(alpha = 0.8) + 
   geom_hline(data = avg, aes(yintercept = avg_n), linetype = 3) +
   geom_label(data = . %>% filter(deptt == "SDS"), 
@@ -74,9 +76,11 @@ enrollment_plot <- ggplot(data = terms,
   scale_y_continuous("Total Enrollment (seats)") + 
   scale_x_discrete("Term") + 
   scale_fill_smith_d("Unit") + 
-  labs(title = "Total enrollment in courses now managed by SDS, 2012-2020", 
-       subtitle = "107, 109, 192, 201, 220, 235, 290, 291, 293, 300, 320, 364, 390, 410", 
-       caption = format(Sys.Date(), "%B %e, %Y")) +
+  labs(
+    title = "Total enrollment in courses now managed by SDS, 2012-2020", 
+    subtitle = "107, 109, 192, 201, 220, 235, 290, 291, 293, 300, 320, 364, 390, 410", 
+    caption = format(Sys.Date(), "%B %e, %Y")
+  ) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 enrollment_plot
@@ -190,22 +194,29 @@ sds %>%
 ```{r enrollment_major_grad_year}
 by_grad_year <- sds %>%
 #  filter(number == 220) %>%
-  group_by(grad_year, is_major) %>%
-  summarize(N = n(), num_students = n_distinct(id)) %>%
+  group_by(grad_year) %>%
+  summarize(
+    N = n(), 
+    num_students = n_distinct(id),
+    num_majors = n_distinct(ifelse(is_major, id, NA)) - 1
+  ) %>%
   filter(grad_year > 2008)
 
-grad_plot <- ggplot(by_grad_year, 
-                    aes(x = grad_year, y = num_students, fill = is_major)) +   
+grad_plot <- ggplot(
+  by_grad_year, 
+  aes(x = grad_year, y = num_students)
+) +
   geom_hline(yintercept = 2502/4/2, linetype = 3) + 
   geom_hline(yintercept = 2502/4/4, linetype = 3) + 
   annotate("text", x = 2013, y = 2502/4/4 + 10, label = "25%", hjust = "left") + 
   annotate("text", x = 2013, y = 2502/4/2 + 10, label = "50% of typical graduating class", hjust = "left") + 
-  geom_bar(stat = "identity") +
-  geom_label(data = . %>% filter(is_major), aes(label = num_students)) + 
-  scale_y_continuous("number of distinct students") + 
+  geom_col(fill = sds::smith_pal_categorical(2)[1]) +
+  geom_col(aes(y = num_majors), fill = sds::smith_pal_categorical(2)[2]) + 
+  geom_label(aes(label = num_majors, y = num_majors)) + 
+  scale_y_continuous("Number of distinct students") + 
   scale_x_continuous("Graduation Year", breaks = c(2012:2024)) + 
-  scale_fill_smith_d("SDS Major") +   
-  labs(title = "Enrollment in SDS Courses by Graduation Year", 
+#  scale_fill_smith_d("SDS Major") + 
+  labs(title = "Enrollment in SDS Courses by Graduation Year, with SDS majors", 
        subtitle = "2012-present", 
        caption = format(Sys.Date(), "%B %e, %Y"))
 grad_plot
